--- a/exercises/3_4/stomatopoda.html
+++ b/exercises/3_4/stomatopoda.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <title>Conheça o Stomatopoda.</title>
   </head>
   <body>
     <header>
-        <title>Soco a 80km/h: Conheça o Stomatopoda.</title>
+        <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
     </header>
+    <nav>
+      <ul>
+        <li>Página Inicial</li>
+        <li>Sobre</li>
+        <li>Contato</li>
+      </ul>
+    </nav>
   </body>
 </html>
