--- a/exercises/3_4/stomatopoda.html
+++ b/exercises/3_4/stomatopoda.html
@@ -16,5 +16,10 @@
         <li>Contato</li>
       </ul>
     </nav>
+    <article>
+      <section>
+        
+      </section>
+    </article>
   </body>
 </html>
