references, movie and kamehameha.jpg added

--- a/exercises/3_4/stomatopoda.html
+++ b/exercises/3_4/stomatopoda.html
@@ -23,17 +23,23 @@
           <img src="img/stomatopoda.jpeg" alt="Stomatopoda"/>
         </section>
         <section>
-            <h3>Nome Científico</h3> 
-            <p style="font-style: italic;">Odontodactylus scyllarus</p>
-            <h3>Classificação</h3>
-            <ul>
-              <li>Reino - <span>Animalia</span></li>
-              <li>Filo - <span>Arthropoda</span></li>
-              <li>Subfilo - <span>Crustacea</span></li>
-              <li>Classe - <span>Malacostraca</span></li>
-              <li>Subclasse - <span>Hoplocarida</span></li>
-              <li>Ordem - <span>Hoplocarida</span></li>
-          </ul>
+          <h3>Nome Científico</h3> 
+          <p style="font-style: italic;">Odontodactylus scyllarus</p>
+          <h3>Classificação</h3>
+          <table>
+            <tr>Reino</tr>
+            <tr>Filo</tr>
+            <tr>Subfilo</tr>
+            <tr>Classe</tr>
+            <tr>Subclasse</tr>
+            <tr>Ordem</tr>
+            <td>Hoplocarida</td>
+            <td>Animalia</td>
+            <td>Arthropoda</td>
+            <td>Crustacea</td>
+            <td>Malacostraca</td>
+            <td>Hoplocarida</td>
+          </table>
         </section>
       </section>
     </article>
@@ -57,7 +63,7 @@
       </section>
       <section>
         <h3>Boxeador campeão!</h3>
-        <img src="img/Pegasus.jpg" alt="Pegasus"/>
+        <img src="img/kamehameha.jpg" alt="Pegasus"/>
         <p>
           Suas incríveis habilidades não se limital à sua exuberante beleza! Este bichinho
            incrível também é capaz de criar um impacto tão forte quanto um tiro de .22! 
@@ -66,5 +72,24 @@
         </p>
       </section>
     </article>
+    <article>
+      <h2>Referências Bibliográficas</h2>
+      <section>
+        <ul>
+          <li><a href="https://m.megacurioso.com.br/animais-sinistros/36141-mantis-conheca-a-lagosta-boxeadora-o-bicho-mais-desgracado-dos-mares-.htm" target="_blank">Mega Curioso</a></li>
+          <li><a href="https://theoatmeal.com/comics/mantis_shrimp" target="_blank">The Oatmeal</a></li>
+          <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda" target="_blank">Wikipédia</a></li>
+          <li><a href="https://narutorpgonline.fandom.com/pt-br/wiki/Sharingan" target="_blank">Naruto RPG</a></li>
+          <li><a href="http://projetocdz.weebly.com/armaduras-de-bronze.html" target="_blank">Projeto CDZ</a></li>
+          <li><a href="https://dragonballagerpg.weebly.com/clubsteacutecnicas-de-variaccedilotildeesclubs.html" target="_blank">Dragonball Age RPG</a></li>
+        </ul> 
+      </section>
+    </article>
+    <aside>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/E0Li1k5hGBE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </aside>
+    <footer>
+      Conteúdo compilado por, <a href="#" target="_blank">LizzardMedeiros</a> 
+    </footer>
   </body>
 </html>
