CSS added and edited

--- a/exercises/3_4/stomatopoda.html
+++ b/exercises/3_4/stomatopoda.html
@@ -3,19 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link href="css/style.css" type="text/css" rel="stylesheet"/>
     <title>Conheça o Stomatopoda.</title>
   </head>
   <body>
     <header>
         <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
+        <nav>
+          <ul>
+            <li>Página Inicial</li>
+            <li>Sobre</li>
+            <li>Contato</li>
+          </ul>
+        </nav>
     </header>
-    <nav>
-      <ul>
-        <li>Página Inicial</li>
-        <li>Sobre</li>
-        <li>Contato</li>
-      </ul>
-    </nav>
     <article>
       <section>
         <h2>Informações Gerais</h2>
