CSS card stylized

--- a/exercises/3_4/stomatopoda.html
+++ b/exercises/3_4/stomatopoda.html
@@ -17,7 +17,7 @@
           </ul>
         </nav>
     </header>
-    <article>
+    <article class="card">
       <section>
         <h2>Informações Gerais</h2>
         <section>
@@ -28,23 +28,25 @@
           <p style="font-style: italic;">Odontodactylus scyllarus</p>
           <h3>Classificação</h3>
           <table>
-            <tr>Reino</tr>
-            <tr>Filo</tr>
-            <tr>Subfilo</tr>
-            <tr>Classe</tr>
-            <tr>Subclasse</tr>
-            <tr>Ordem</tr>
-            <td>Hoplocarida</td>
-            <td>Animalia</td>
-            <td>Arthropoda</td>
-            <td>Crustacea</td>
-            <td>Malacostraca</td>
-            <td>Hoplocarida</td>
+            <th>Reino</th>
+            <th>Filo</th>
+            <th>Subfilo</th>
+            <th>Classe</th>
+            <th>Subclasse</th>
+            <th>Ordem</th>
+            <tr>
+              <td>Hoplocarida</td>
+              <td>Animalia</td>
+              <td>Arthropoda</td>
+              <td>Crustacea</td>
+              <td>Malacostraca</td>
+              <td>Hoplocarida</td>
+            </tr>
           </table>
         </section>
       </section>
     </article>
-    <article>
+    <article class="card">
       <h2>Fatos Interessantes</h2>
       <section>
         <h3>Visão excepcional!</h3>
