--- a/exercises/3_4/stomatopoda.html
+++ b/exercises/3_4/stomatopoda.html
@@ -8,91 +8,95 @@
   </head>
   <body>
     <header>
-        <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
-        <nav>
-          <ul>
-            <li>Página Inicial</li>
-            <li>Sobre</li>
-            <li>Contato</li>
-          </ul>
-        </nav>
-    </header>
-    <article class="card">
-      <section>
-        <h2>Informações Gerais</h2>
-        <section>
-          <img src="img/stomatopoda.jpeg" alt="Stomatopoda"/>
-        </section>
-        <section>
-          <h3>Nome Científico</h3> 
-          <p style="font-style: italic;">Odontodactylus scyllarus</p>
-          <h3>Classificação</h3>
-          <table>
-            <th>Reino</th>
-            <th>Filo</th>
-            <th>Subfilo</th>
-            <th>Classe</th>
-            <th>Subclasse</th>
-            <th>Ordem</th>
-            <tr>
-              <td>Hoplocarida</td>
-              <td>Animalia</td>
-              <td>Arthropoda</td>
-              <td>Crustacea</td>
-              <td>Malacostraca</td>
-              <td>Hoplocarida</td>
-            </tr>
-          </table>
-        </section>
-      </section>
-    </article>
-    <article class="card">
-      <h2>Fatos Interessantes</h2>
-      <section>
-        <h3>Visão excepcional!</h3>
-        <img src="img/Sharingan.png" alt="Sharingan"/>
-        <p>
-          Este incrível animal é capaz de perceber 16 cores primárias! 
-          Ou seja, ao observar um arco-íris, o bichinho é capaz de ver não somente as 7 
-          cores que conhecemos, mas também outras 20.922.789.887.992 a mais! #OMG!
-        </p>
-      </section>
-      <section>
-        <h3>Beleza incomparável!</h3>
-        <img src="img/Pegasus.jpg" alt="Pegasus"/>
-        <p>
-          Sua carapaça é multi-colorida e furtacor! Além de ser brilhante e parecer uma armadura dos CDZ!
-        </p>
-      </section>
-      <section>
-        <h3>Boxeador campeão!</h3>
-        <img src="img/kamehameha.jpg" alt="Pegasus"/>
-        <p>
-          Suas incríveis habilidades não se limital à sua exuberante beleza! Este bichinho
-           incrível também é capaz de criar um impacto tão forte quanto um tiro de .22! 
-           Literalmente! Ao usar suas garras como um chicote, ele gera uma onda de choque 
-           tão violenta, que produz bolhas e até luz ao superaquecer a água! 
-        </p>
-      </section>
-    </article>
-    <article>
-      <h2>Referências Bibliográficas</h2>
-      <section>
+      <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
+      <nav>
         <ul>
-          <li><a href="https://m.megacurioso.com.br/animais-sinistros/36141-mantis-conheca-a-lagosta-boxeadora-o-bicho-mais-desgracado-dos-mares-.htm" target="_blank">Mega Curioso</a></li>
-          <li><a href="https://theoatmeal.com/comics/mantis_shrimp" target="_blank">The Oatmeal</a></li>
-          <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda" target="_blank">Wikipédia</a></li>
-          <li><a href="https://narutorpgonline.fandom.com/pt-br/wiki/Sharingan" target="_blank">Naruto RPG</a></li>
-          <li><a href="http://projetocdz.weebly.com/armaduras-de-bronze.html" target="_blank">Projeto CDZ</a></li>
-          <li><a href="https://dragonballagerpg.weebly.com/clubsteacutecnicas-de-variaccedilotildeesclubs.html" target="_blank">Dragonball Age RPG</a></li>
-        </ul> 
-      </section>
-    </article>
-    <aside>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/E0Li1k5hGBE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </aside>
+          <li>Página Inicial</li>
+          <li>Sobre</li>
+          <li>Contato</li>
+        </ul>
+      </nav>
+    </header>
+    <div class="content">
+      <article class="card">
+        <section>
+          <h2>Informações Gerais</h2>
+          <section>
+            <img class="portifolio" src="img/stomatopoda.jpeg" alt="Stomatopoda"/>
+          </section>
+          <section>
+            <h3>Nome Científico</h3> 
+            <p style="font-style: italic;">Odontodactylus scyllarus</p>
+            <h3>Classificação</h3>
+            <table>
+              <th>Reino</th>
+              <th>Filo</th>
+              <th>Subfilo</th>
+              <th>Classe</th>
+              <th>Subclasse</th>
+              <th>Ordem</th>
+              <tr>
+                <td>Hoplocarida</td>
+                <td>Animalia</td>
+                <td>Arthropoda</td>
+                <td>Crustacea</td>
+                <td>Malacostraca</td>
+                <td>Hoplocarida</td>
+              </tr>
+            </table>
+          </section>
+        </section>
+      </article>
+
+      <aside>
+        <iframe width="auto" src="https://www.youtube.com/embed/E0Li1k5hGBE" frameborder="5" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </aside>
+
+      <article id="facts" class="card">
+        <h2>Fatos Interessantes</h2>
+        <section>
+          <h3>Visão excepcional!</h3>
+          <img class="icon" src="img/Sharingan.png" alt="Sharingan"/>
+          <p>
+            Este incrível animal é capaz de perceber 16 cores primárias! 
+            Ou seja, ao observar um arco-íris, o bichinho é capaz de ver não somente as 7 
+            cores que conhecemos, mas também outras 20.922.789.887.992 a mais! #OMG!
+          </p>
+        </section>
+        <section>
+          <h3>Beleza incomparável!</h3>
+          <p>
+            Sua carapaça é multi-colorida e furtacor! Além de ser brilhante e parecer uma armadura dos CDZ!
+          </p>
+          <img class="icon" src="img/Pegasus.jpg" alt="Pegasus"/>
+        </section>
+        <section>
+          <h3>Boxeador campeão!</h3>
+          <img class="icon" src="img/kamehameha.jpg" alt="Pegasus"/>
+          <p>
+            Suas incríveis habilidades não se limital à sua exuberante beleza! Este bichinho
+            incrível também é capaz de criar um impacto tão forte quanto um tiro de .22! 
+            Literalmente! Ao usar suas garras como um chicote, ele gera uma onda de choque 
+            tão violenta, que produz bolhas e até luz ao superaquecer a água! 
+          </p>
+        </section>
+      </article>
+      <article>
+        <h2>Referências Bibliográficas</h2>
+        <section>
+          <ul>
+            <li><a href="https://m.megacurioso.com.br/animais-sinistros/36141-mantis-conheca-a-lagosta-boxeadora-o-bicho-mais-desgracado-dos-mares-.htm" target="_blank">Mega Curioso</a></li>
+            <li><a href="https://theoatmeal.com/comics/mantis_shrimp" target="_blank">The Oatmeal</a></li>
+            <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda" target="_blank">Wikipédia</a></li>
+            <li><a href="https://narutorpgonline.fandom.com/pt-br/wiki/Sharingan" target="_blank">Naruto RPG</a></li>
+            <li><a href="http://projetocdz.weebly.com/armaduras-de-bronze.html" target="_blank">Projeto CDZ</a></li>
+            <li><a href="https://dragonballagerpg.weebly.com/clubsteacutecnicas-de-variaccedilotildeesclubs.html" target="_blank">Dragonball Age RPG</a></li>
+          </ul> 
+        </section>
+      </article>
+    </div>
     <footer>
-      Conteúdo compilado por, <a href="#" target="_blank">LizzardMedeiros</a> 
+      <p>Conteúdo compilado por, <a href="#" target="_blank">LizzardMedeiros</a></p>
     </footer>
   </body>
 </html>
