Updating fonts and cards

--- a/exercises/3_4/stomatopoda.html
+++ b/exercises/3_4/stomatopoda.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
     <title>Conheça o Stomatopoda.</title>
   </head>
@@ -18,7 +19,7 @@
       </nav>
     </header>
     <div class="content">
-      <article class="card">
+      <article class="card" style="width: 60%;">
         <section>
           <h2>Informações Gerais</h2>
           <section>
@@ -27,32 +28,46 @@
           <section>
             <h3>Nome Científico</h3> 
             <p style="font-style: italic;">Odontodactylus scyllarus</p>
-            <h3>Classificação</h3>
-            <table>
-              <th>Reino</th>
-              <th>Filo</th>
-              <th>Subfilo</th>
-              <th>Classe</th>
-              <th>Subclasse</th>
-              <th>Ordem</th>
-              <tr>
-                <td>Hoplocarida</td>
-                <td>Animalia</td>
-                <td>Arthropoda</td>
-                <td>Crustacea</td>
-                <td>Malacostraca</td>
-                <td>Hoplocarida</td>
-              </tr>
-            </table>
           </section>
         </section>
       </article>
 
       <aside>
+        Assista o bichinho em ação!<hr/>
         <iframe width="auto" src="https://www.youtube.com/embed/E0Li1k5hGBE" frameborder="5" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <hr/>
+        <h3>Classificação</h3>
+
+        <table>
+          <tr>
+            <th>Reino</th>
+            <td>Animalia</td>
+          </tr>
+          <tr>
+            <th>Filo</th>
+            <td>Hoplocarida</td>
+          </tr>
+          <tr>
+            <th>Subfilo</th>
+            <td>Arthropoda</td>
+          </tr>
+          <tr>
+            <th>Classe</th>
+            <td>Crustacea</td>
+          </tr>
+          <tr>
+            <th>Subclasse</th>
+            <td>Malacostraca</td>
+          </tr>
+          <tr>
+            <th>Ordem</th>
+            <td>Hoplocarida</td>
+          </tr>
+        </table>
+
       </aside>
 
-      <article id="facts" class="card">
+      <article id="facts" class="card" style="width: 85%;">
         <h2>Fatos Interessantes</h2>
         <section>
           <h3>Visão excepcional!</h3>
@@ -81,9 +96,9 @@
           </p>
         </section>
       </article>
-      <article>
+      <article class="card" style="width: 85%;">
         <h2>Referências Bibliográficas</h2>
-        <section>
+        <section id="refs">
           <ul>
             <li><a href="https://m.megacurioso.com.br/animais-sinistros/36141-mantis-conheca-a-lagosta-boxeadora-o-bicho-mais-desgracado-dos-mares-.htm" target="_blank">Mega Curioso</a></li>
             <li><a href="https://theoatmeal.com/comics/mantis_shrimp" target="_blank">The Oatmeal</a></li>
