--- a/exercises/3_4/stomatopoda.html
+++ b/exercises/3_4/stomatopoda.html
@@ -8,32 +8,32 @@
     <title>Conheça o Stomatopoda.</title>
   </head>
   <body>
-    <header>
+    <header id="home">
       <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
       <nav>
         <ul>
-          <li>Página Inicial</li>
-          <li>Sobre</li>
-          <li>Contato</li>
+          <li><a href="#home">Página Inicial</a></li>
+          <li><a href="#infos">Sobre</a></li>
+          <li><a href="#refs">Referências</a></li>
         </ul>
       </nav>
     </header>
     <div class="content">
       <article class="card" style="width: 60%;">
-        <section>
+        <section id="infos">
           <h2>Informações Gerais</h2>
           <section>
             <img class="portifolio" src="img/stomatopoda.jpeg" alt="Stomatopoda"/>
           </section>
           <section>
             <h3>Nome Científico</h3> 
-            <p style="font-style: italic;">Odontodactylus scyllarus</p>
+            <p style="font-style: italic; text-align: center;">Odontodactylus scyllarus</p>
           </section>
         </section>
       </article>
 
       <aside>
-        Assista o bichinho em ação!<hr/>
+        Assista o bichinho em ação!<br/><br/><hr/>
         <iframe width="auto" src="https://www.youtube.com/embed/E0Li1k5hGBE" frameborder="5" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <hr/>
         <h3>Classificação</h3>
