--- a/exercises/4_7/parte_III/ex01.html
+++ b/exercises/4_7/parte_III/ex01.html
@@ -13,9 +13,17 @@
     let img = document.querySelector("img");
     img.style.left = "0px";
     let timer = {};
+    let forward = true;
     function walk(){
       let p = parseInt(img.style.left);
-      img.style.left = (p >= window.innerWidth) ? "0px" : (p+10).toString()+"px";
+      if(p>window.innerWidth || p<0) forward = !forward;
+      if(forward){
+        img.style.transform = "scaleX(1)";
+        img.style.left = (p+10).toString()+"px";
+      } else {
+        img.style.transform = "scaleX(-1)";
+        img.style.left = (p-10).toString()+"px";
+      }
       timer = setTimeout(walk, 50);
     }
     walk();
