Ex all done (with bonus)

--- a/exercises/4_8/ex01.html
+++ b/exercises/4_8/ex01.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap" rel="stylesheet">
-    <link href="style.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/style.css" type="text/css" rel="stylesheet"/>
     <title>Leitor</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
@@ -12,7 +12,7 @@
   <header>
     <nav>
       <div class="left-block">
-        <img id="icon" src="icon.png" width="64px" alt="icon"/>
+        <img id="icon" src="./img/icon.png" width="64px" alt="icon"/>
       </div>
 
       <div id="pallete" class="middle-block">
@@ -20,10 +20,10 @@
 
       <div id="tools" class="hidden-block">
         <div id="reduce" class="box">
-          <img src="reduce-font.png" alt="reduce" width="42px">
+          <img src="./img/reduce-font.png" alt="reduce" width="42px">
         </div>
         <div id="raise" class="box">
-          <img src="raise-font.png" alt="raise" width="42px">
+          <img src="./img/raise-font.png" alt="raise" width="42px">
         </div>
       </div>
 
