--- a/exercises/6_1/ex01.html
+++ b/exercises/6_1/ex01.html
@@ -1,141 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <form action="">
-    <fieldset>
-      <div>
-        <input type="text" id="name-input" maxlength="40" name="name" required/>
-        <label for="name-input">Nome</label>
-      </div>
-      <div>
-        <input type="email" id="email-input" maxlength="50" name="email" required/>
-        <label for="email-input">E-Mail</label>
-      </div>
-      <div>
-        <input type="text" id="cpf-input" maxlength="11" name="cpf" required/>
-        <label for="cpf-input">CPF</label>
-      </div>
-    </fieldset>
-    <fieldset>
-      <div>
-        <input type="text" id="addr-input" maxlength="200" name="address" required/>
-        <label for="addr-input">Endereço</label>
-      </div>
-      <div>
-        <input type="text" id="city-input" maxlength="200" name="city" required/>
-        <label for="city-input">Cidade</label>
-      </div>
-      <div>
-        <select name="state" id="state-input" required>
-        </select>
-        <label for="state-input">Estado</label>
-      </div>
-      <div>
-        <input type="radio" id="radio_house" name="type" value="house"/>
-        <label for="radio_house">Casa</label>
-        <input type="radio" id="radio_apartament" name="type" value="apartament"/>
-        <label for="radio_apartament">Apartamento</label>
-      </div>
-    </fieldset>
-    <fieldset>
-      <div>
-        <textarea name="resume" id="resume-input" cols="30" rows="10" maxlength="1000" required></textarea>
-        <label for="resume-input">Resumo do Curriculum</label>
-      </div>
-      <div>
-        <input type="text" name="job" id="job-input" maxlength="30" required>
-        <label for="job-input">Cargo</label>
-      </div>
-      <div>
-        <input type="text" name="jobdesc" id="jobdesc-input" maxlength="500" required>
-        <label for="jobdesc-input">Resumo do Cargo</label>
-      </div>
-      <div>
-        <input type="text" name="startat" id="start-input" maxlength="12" required>
-        <label for="start-input">Data de início</label>
-      </div>
-    </fieldset>
-    <div>
-      <button id="process-button">Processar</button>
-      <button id="clean-button">Limpar tudo</button>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="materialize/css/materialize.min.css" type="text/css"/>
+    <link rel="stylesheet" href="css/style.css" type="text/css"/>
+    <script src="materialize/js/materialize.min.js"></script>
+    <script src="js/script.js"></script>
+  </head>
+  <body class="teal darken-4">
+    <div class="row container grey lighten-5">
+      <form class="col s12 form" action="#">
+        <div class="row">
+          <div class="input-field col s12">
+            <input type="text" data="Nome" id="name-input" maxlength="40" data-validate-field="name" name="name"/>
+            <label for="name-input">Nome</label>
+          </div>
+          <div class="input-field col s6">
+            <input type="email" data="E-Mail" id="email-input" maxlength="50" name="email" data-validate-field="email"/>
+            <label for="email-input">E-Mail</label>
+          </div>
+          <div class="input-field col s6">
+            <input type="number" data="CPF" id="cpf-input" maxlength="11" name="cpf" data-validate-field="cpf"/>
+            <label for="cpf-input">CPF</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s4">
+            <p>
+              <input type="text" data="Endereço" id="addr-input" maxlength="200" name="address" data-validate-field="address"/>
+            </p>
+            <label for="addr-input">Endereço</label>
+          </div>
+          <div class="input-field col s4">
+            <p>
+              <input type="text" data="Cidade" id="city-input" maxlength="200" name="city" data-validate-field="city"/>
+            </p>
+            <label for="city-input">Cidade</label>
+          </div>
+          <div class="input-field col s2">
+            <p>
+              <select name="state" data="Estado" id="state-input" data-validate-field="state">
+              </select>
+            </p>
+            <label for="state-input">Estado</label>
+          </div>
+          <div class="input-field col s2">
+            <p>
+              <label>
+                <input name="house-input" data="Casa" type="radio" checked />
+                <span>Casa</span>
+              </label>
+            </p>
+            <p>
+              <label>
+                <input name="house-input" data="Apartamento" class="input" type="radio" />
+                <span>Apartamento</span>
+              </label>
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s12">
+            <textarea name="resume" data="Resumo" class="materialize-textarea" id="resume-input" cols="30" rows="10" maxlength="1000" data-validate-field="resume"></textarea>
+            <label for="resume-input">Resumo do Curriculum</label>
+          </div>
+          <div class="input-field col s4">
+            <input type="text" data="Cargo" name="job" id="job-input" maxlength="30" data-validate-field="job">
+            <label for="job-input">Cargo</label>
+          </div>
+          <div class="input-field col s8">
+            <input type="text" data="Resumo cargo" name="jobdesc" id="jobdesc-input" maxlength="500" data-validate-field="jobdesc">
+            <label for="jobdesc-input">Resumo do Cargo</label>
+          </div>
+          <div class="input-field input col s3">
+            <input type="text" name="date" data="Data" class="datepicker" placeholder="Data de início" data-validate-field="date">
+          </div>
+        </div>
+        <div>
+          <button class="btn green form__btn" id="process-button">Processar</button>
+          <button class="btn red" id="clean-button">Limpar tudo</button>
+        </div>
+      </form>
     </div>
-  </form>
-  <div class="result"></div>
-</body>
-<script>
-  const stateInput = document.querySelector('#state-input');
-  const startInput = document.querySelector('#start-input');
-  const processButton = document.querySelector('#process-button');
-  const cleanButton = document.querySelector('#clean-button');
-  const stateList = [
-    ['Acre', 'AC'],
-    ['Alagoas', 'AL'],
-    ['Amapá', 'AP'],
-    ['Amazonas', 'AM'],
-    ['Bahia', 'BA'],
-    ['Ceará', 'CE'],
-    ['Distrito Federal', 'DF'],
-    ['Espírito Santo', 'ES'],
-    ['Goiás', 'GO'],
-    ['Maranhão', 'MA'],
-    ['Mato Grosso', 'MT'],
-    ['Mato Grosso do Sul', 'MS'],
-    ['Minas Gerais', 'MG'],
-    ['Pará', 'PA'],
-    ['Paraíba', 'PB'],
-    ['Paraná', 'PR'],
-    ['Pernambuco', 'PE'],
-    ['Piauí', 'PI'],
-    ['Rio de Janeiro', 'RJ'],
-    ['Rio Grande do Norte', 'RN'],
-    ['Rio Grande do Sul', 'RS'],
-    ['Rondônia', 'RO'],
-    ['Roraima', 'RR'],
-    ['Santa Catarina', 'SC'],
-    ['São Paulo', 'SP'],
-    ['Sergipe', 'SE'],
-    ['Tocantins', 'TO']
-  ];
-  
-  stateList.forEach((state) => {
-    const option = stateInput.appendChild(document.createElement('option'));
-    option.innerText = state[0];
-    option.value = state[1];
-  });
 
-  processButton.addEventListener('click', function (ev) {
-    ev.preventDefault();
-    const inputs = document.querySelectorAll('input');
-    const result = document.querySelector('.result');
-    result.innerHTML = "";
-    inputs.forEach((input) => {
-      const p = document.createElement('p');
-      const desc = document.querySelector(`label[for=${input.id}]`);
-      result.appendChild(p).innerText = `${desc.innerText} : ${input.value}`;
-    });
-  });
+    <div id="modal" class="modal">
+      <div class="modal-content">
+        <h4>Resultado</h4>
+        <div class="result"></div>
+      </div>
+      <div class="modal-footer">
+        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+      </div>
+    </div>
 
-  cleanButton.addEventListener('click', function (ev) {
-    ev.preventDefault();
-    const inputs = document.querySelectorAll('input');
-    inputs.forEach((input) => {
-      input.value = "";
-    });
-  });
-
-  startInput.addEventListener('keyup', function (el) {
-    let v = el.target.value;
-    //if(v.match(/[^0-9][^\/]/)) el.target.value = '';
-    if (v.match(/^\d{2}$/) !== null) {
-      el.target.value = v + '/';
-    } else if (v.match(/^\d{2}\/\d{2}$/) !== null) {
-      el.target.value = v + '/';
-    }
-  });
-</script>
+    <script src="https://horprogs.github.io/Just-validate/dist/js/just-validate.min.js"></script>
+  </body>
 </html>
