--- a/exercises/6_5/ex05.html
+++ b/exercises/6_5/ex05.html
@@ -12,11 +12,8 @@
     border: 8px solid black;
     background: yellow;
   }
-  div.example:nth-child(2) {
-  	display: block;
-  }
-@media (min-width: 600px) and (max-width: 900px) {
-  div.example:nth-child(2) {
+@media (max-width: 600px) {
+  div.example:nth-child(1) {
     display: none;
   }
 }
